--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -41,7 +41,7 @@
                                 </label>
 
                                 <label class='form-label' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
-                                    Choose chords in accordance with classical chord leading rules
+                                    Choose chords according to classical chord leading rules
                                     <!-- <span class='glyphicon glyphicon-question-sign help-icon' id='help-chord-leading'></span> -->
                                 </label>
 
