--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -40,6 +40,11 @@
                                     Disallow consecutive <span *ngIf="generationType == 'melody'">note</span> <span *ngIf="generationType == 'chords'">chord</span> repeats
                                 </label>
 
+                                <label class='form-label' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
+                                    Choose chords according to classical chord leading rules
+                                    <!-- <span class='glyphicon glyphicon-question-sign help-icon' id='help-chord-leading'></span> -->
+                                </label>
+
                             </div>
                             <div class='col-6'>
                                 <select name="key" style="text-align-last:center;width:70px;display:inline-block"  class='form-control' [ngModel]="configDataService.key" >
@@ -62,9 +67,15 @@
                                     notes
                                 </label>
                                 <br/>
-                                <label class='custom-checkbox' style='display:inline-block;margin-right:15px;'>
+                                <label class='custom-checkbox' style='display:block;margin-right:15px;'>
                                     <input class='form-control' style='width:70px; display:inline-block' [(ngModel)]="disallowRepeats" type="checkbox" name="disallowRepeats">
                                     <span class="checkmark"></span>
+                                </label>
+                                <br/>
+                                <br/>
+                                <label class='custom-checkbox' style='display:block;margin-right:15px;' *ngIf="generationType == 'chords'">
+                                    <input class='form-control' style='width:70px; display:inline-block' [(ngModel)]="useChordLeadingChart" type="checkbox" name="useChordLeadingChart">
+                                    <span class="checkmark" style='top:-5px'></span>
                                 </label>
                             </div>
                         </div>
