--- a/ClientApp/src/app/track.component.html
+++ b/ClientApp/src/app/track.component.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class='col-1 track-right-pane'>
-            <button class="delete-track-button" id="clear-button" (click)="deleteTrack()">
+            <button class="glyphicon-button delete-track-button" id="clear-button" (click)="deleteTrack()">
                 <span class='glyphicon glyphicon-trash'></span>
             </button>
         </div>
