--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -228,3 +228,57 @@ input[type=number] {
 .bottom-space {
     height:700px;
 }
+
+.glyphicon-button {
+    background:none;
+    border:0;
+    color:white;
+    padding:5px 10px;
+    font-size:15px;
+    margin:10px 10px 0 15px;
+    opacity:0.7;
+    transition:opacity .2s;
+    -webkit-transition:opacity .2s;
+    -moz-transition:opacity .2s;
+}
+
+.glyphicon-button:hover {
+    opacity: 1;
+}
+
+#logs-button {
+    position:absolute;
+    right:15px;
+    top:-5px;
+}
+
+.logs-wrapper {
+    height:250px;
+    width:50%;
+    background: #c6f7ff;
+    font-size:12px;
+    color:white;
+    position:fixed;
+    right:58px;
+    top:67px;
+    opacity:0.8;
+    backdrop-filter: blur(10px);
+    border-radius:3px;
+    z-index:1040;
+    border:solid 1px #00869e;
+    padding:25px;
+    overflow-y:auto;
+}
+
+#logs-close-button {
+    position: absolute;
+    top: 0px;
+    right:5px;
+    color: #00869e;
+}
+
+.app-log-line {
+    color:black;
+    font-size:12px;
+
+}
