--- a/ClientApp/src/app/track.component.css
+++ b/ClientApp/src/app/track.component.css
@@ -18,20 +18,8 @@
 }
 
 .delete-track-button {
-    background:none;
-    border:0;
-    color:white;
-    padding:5px 10px;
-    font-size:15px;
-    margin:10px 10px 0 15px;
-    opacity:0.7;
-    transition:opacity .2s;
-    -webkit-transition:opacity .2s;
-    -moz-transition:opacity .2s;
-}
-
-.delete-track-button:hover {
-    opacity: 1;
+    position:absolute;
+    right:20px;
 }
 
 .region-preview {
