--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -255,30 +255,51 @@ input[type=number] {
 .logs-wrapper {
     height:250px;
     width:50%;
-    background: #c6f7ff;
+    background: white;
     font-size:12px;
     color:white;
     position:fixed;
     right:58px;
     top:67px;
-    opacity:0.8;
-    backdrop-filter: blur(10px);
     border-radius:3px;
     z-index:1040;
     border:solid 1px #00869e;
-    padding:25px;
     overflow-y:auto;
 }
 
-#logs-close-button {
+#logs-close-button, #logs-clear-button {
     position: absolute;
-    top: 0px;
-    right:5px;
+    top: -5px;
     color: #00869e;
+}
+
+#logs-close-button {
+    right:5px;
+}
+
+#logs-clear-button {
+    right:35px;
+}
+
+.panel-title {
+    font-size:16px;
+    color:black;
+    font-weight:500;
+}
+
+.panel-header {
+    border-bottom: solid 1px #e5e5e5;
+    height:40px;
+}
+
+.panel-header, .panel-body {
+    padding:10px 20px;
 }
 
 .app-log-line {
     color:black;
     font-size:12px;
-
+    display:block;
+    margin-bottom:2px;
+    letter-spacing:0.7px;
 }
