--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
+<div [ngClass]="{ 'load-spinner' : true, 'spinner-hidden': pageLoaded, 'spinner-gone': pageReady } "></div>
 <div class="container-fluid" id="application-wrapper">
     <div class="row primary-color" id="top-toolbar">
         <button mat-button id="File" [matMenuTriggerFor]="filemenu">File</button>
