--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -71,7 +71,7 @@
                 <span class="glyphicon glyphicon-trash"></span>
             </button>
             <button class='glyphicon-button' id='logs-close-button' (click)="showLogs = false">
-                <span class="glyphicon glyphicon-remove"></span>
+                <span class="glyphicon glyphicon-eye-close"></span>
             </button>
         </div>
         <div class='panel-body'>
