--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -228,3 +228,102 @@ input[type=number] {
 .bottom-space {
     height:700px;
 }
+
+.glyphicon-button {
+    background:none;
+    border:0;
+    color:white;
+    padding:5px 10px;
+    font-size:15px;
+    margin:10px 10px 0 15px;
+    opacity:0.7;
+    transition:opacity .2s;
+    -webkit-transition:opacity .2s;
+    -moz-transition:opacity .2s;
+}
+
+.glyphicon-button:hover {
+    opacity: 1;
+}
+
+#logs-button {
+    position:absolute;
+    right:15px;
+    top:-5px;
+}
+
+.logs-wrapper {
+    height:350px;
+    width:60%;
+    background: white;
+    font-size:8px;
+    color:white;
+    position:fixed;
+    right:58px;
+    top:67px;
+    border-radius:3px;
+    z-index:1040;
+    border:solid 1px #00869e;
+    overflow-y:auto;
+}
+
+#logs-close-button, #logs-clear-button {
+    position: absolute;
+    top: -5px;
+    color: #00869e;
+}
+
+#logs-close-button {
+    right:5px;
+}
+
+#logs-clear-button {
+    right:35px;
+}
+
+.panel-title {
+    font-size:16px;
+    color:black;
+    font-weight:500;
+}
+
+.panel-header {
+    border-bottom: solid 1px #e5e5e5;
+    height:40px;
+}
+
+.panel-header, .panel-body {
+    padding:10px 20px;
+}
+
+.app-log-line {
+    color:black;
+    font-size:12px;
+    display:block;
+    margin-bottom:4px;
+    /* letter-spacing:0.7px; */
+}
+
+.load-spinner {
+    position:fixed;
+    z-index:2000;
+    background:#c6f7ff;
+    height:100%;
+    width:100%;
+    transition: opacity .3s;
+    -webkit-transition: opacity .3s;
+    -moz-transition: opacity .3s;
+}
+
+.load-spinner.spinner-hidden {
+    opacity: 0;
+    user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+}
+
+.load-spinner.spinner-gone {
+    display:none;
+}
