--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
+<div [ngClass]="{ 'load-spinner' : true, 'spinner-hidden': pageLoaded, 'spinner-gone': pageReady } "></div>
 <div class="container-fluid" id="application-wrapper">
     <div class="row primary-color" id="top-toolbar">
         <button mat-button id="File" [matMenuTriggerFor]="filemenu">File</button>
@@ -52,11 +53,32 @@
                 </div>
             </form>
         </div>
+        <div class="col tex-left">
+            <button class="glyphicon-button" id="logs-button" (click)="showLogs = !showLogs">
+                <span class='glyphicon glyphicon-inbox'></span>
+            </button>
+        </div>
     </header>
     <div class='row control-bar'>
         <button id='add-track-button' class='control-bar-button' (click)="addTrack()">
             <span class='glyphicon glyphicon-plus'></span> ADD TRACK
         </button>
+    </div>
+    <div class='logs-wrapper' *ngIf='showLogs'>
+        <div class='panel-header'>
+            <span class='panel-title'>Logging Outputs</span>
+            <button class='glyphicon-button' id='logs-clear-button' (click)="appLogs = []">
+                <span class="glyphicon glyphicon-trash"></span>
+            </button>
+            <button class='glyphicon-button' id='logs-close-button' (click)="showLogs = false">
+                <span class="glyphicon glyphicon-eye-close"></span>
+            </button>
+        </div>
+        <div class='panel-body'>
+            <span class='app-log-line' *ngFor="let line of appLogs">
+                {{ line }}
+            </span>
+        </div>
     </div>
     <div class='header-space'></div>
     <template #newTrack></template>
