--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -21,7 +21,7 @@
                 Generative<b>DAW</b>
             </span>
         </div>
-        <div class="col text-left">
+        <div class="col-7 text-left">
             <form [formGroup]='controlPanelForm' id='control-panel-form' (change)='updateConfigState()' style='display:inline-block'>
                 <div class='control-panel'>
                     <button id='play-button' class='top-bar-button' (click)="togglePlayState()">
@@ -53,7 +53,7 @@
                 </div>
             </form>
         </div>
-        <div class="col tex-left">
+        <div class="col-1 tex-left">
             <button class="glyphicon-button" id="logs-button" (click)="showLogs = !showLogs">
                 <span class='glyphicon glyphicon-inbox'></span>
             </button>
@@ -74,6 +74,7 @@
                 <span class="glyphicon glyphicon-eye-close"></span>
             </button>
         </div>
+        <div class='panel-header-spacer'></div>
         <div class='panel-body'>
             <span class='app-log-line' *ngFor="let line of appLogs">
                 {{ line }}
