--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -11,6 +11,10 @@
           <mat-icon>music_note</mat-icon>
           <span>Export to MIDI</span>
         </button>
+        <button mat-menu-item (click)="exportToMidiWithLog()">
+            <mat-icon>assignment_returned</mat-icon>
+            <span>Download MIDI & last generation log</span>
+          </button>
     </mat-menu>
     <header class="row primary-color">
         <div class="col-4 text-left">
