--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -85,7 +85,7 @@
                         <div class='row'>
                             <div class='col-8'>
                                 <label class='form-label form-label-text' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
-                                    Chance to use classical chord leading charts to choose follow-up chord roots
+                                    Chance to use classical chord leading charts to choose follow-up chord
                                 </label>
 
                                 <label class='form-label form-label-text' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
