--- a/ClientApp/src/app/piano-roll.component.css
+++ b/ClientApp/src/app/piano-roll.component.css
@@ -395,3 +395,14 @@ label.disabled {
     color: #2196F3;
     cursor: pointer;
 }
+
+.piano-roll-input-group {
+    padding-left:5px;
+    margin-top:15px;
+    color:black;
+}
+
+.piano-roll-input-group input {
+    width: 80px;
+    height:30px;
+}
