--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -85,15 +85,24 @@
                         <div class='row'>
                             <div class='col-8'>
                                 <label class='form-label form-label-text' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
-                                    Chance to use classical chord leading charts to choose follow-up chord
+                                    Likelihood of using classical chord leading charts to choose follow-up chord
                                 </label>
 
                                 <label class='form-label form-label-text' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
-                                    Chance to use tastefully selected voicings from chord voicing library
+                                    Likelihood of using tastefully selected voicing from chord voicing library
+                                </label>
+                                
+                                <label class='form-label form-label-text' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
+                                    Likelihood of allowing non-diatonic chord
                                 </label>
 
                                 <label class='form-label form-label-text' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
-                                    Constrain V chords to be dominant 7 chords
+                                    Constrain V to be dominant 7 chords
+                                    <!-- Allow dominant chords to contain accidentals from altered notes -->
+                                </label>
+
+                                <label class='form-label form-label-text' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
+                                    Allow dominant chords to contain accidentals from altered notes
                                 </label>
                             </div>
                             <div class='col-4'>
@@ -102,6 +111,9 @@
                                 </label>
                                 <label class='form-label' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
                                     <input class='form-control' [(ngModel)]="chanceToUseCommonVoicing" type="number" name="chanceToUseCommonVoicing" style='width:70px; display:inline-block' >
+                                </label>
+                                <label class='form-label' style='display:block;margin-right:15px;' *ngIf="generationType == 'chords'">
+                                    <input class='form-control' [(ngModel)]="chanceToUseNonDiatonicChord" type="number" name="chanceToUseNonDiatonicChord" style='width:70px; display:inline-block' >
                                 </label>
                                 <label class='custom-checkbox' style='display:block;margin-right:15px;'>
                                     <input class='form-control' style='width:70px; display:inline-block' [(ngModel)]="VMustBeDominant7" type="checkbox" name="VMustBeDominant7">
