--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -90,6 +90,13 @@
                                 </label>
 
                                 <label class='form-label form-label-text' style='display:block;margin-right:15px;' *ngIf="generationType == 'chords'">
+                                    Chance to allow arbitrary non-diatonic chord
+                                </label>
+                                <label class='form-label form-label-text' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
+                                    Chance to allow alt dominant chords with accidentals (stacks)
+                                 </label>
+
+                                <label class='form-label form-label-text' style='display:block;margin-right:15px;' *ngIf="generationType == 'chords'">
                                     Chance to allow borrowed chord (does not stack)
                                 </label>
 
@@ -98,13 +105,7 @@
                                      Allow dominant chords to contain accidentals from altered notes -->
                                 <!-- </label> -->
 
-                                <label class='form-label form-label-text' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
-                                   Chance to allow alt dominant chords with accidentals (does not stack)
-                                </label>
-
-                                <label class='form-label form-label-text' style='display:block;margin-right:15px;' *ngIf="generationType == 'chords'">
-                                    Chance to allow arbitrary non-diatonic chord
-                                </label>
+                                
                             </div>
                             <div class='col-4'>
                                 <label class='form-label' style='display:block;margin-right:15px;' *ngIf="generationType == 'chords'">
@@ -114,13 +115,13 @@
                                     <input class='form-control' [(ngModel)]="chanceToUseCommonVoicing" type="number" name="chanceToUseCommonVoicing" style='width:70px; display:inline-block' >
                                 </label>
                                 <label class='form-label' style='display:block;margin-right:15px;' *ngIf="generationType == 'chords'">
-                                    <input class='form-control' [(ngModel)]="chanceToAllowBorrowedChord" type="number" name="chanceToAllowBorrowedChord" style='width:70px; display:inline-block' >
+                                    <input class='form-control' [(ngModel)]="chanceToAllowNonDiatonicChord" type="number" name="chanceToAllowNonDiatonicChord" style='width:70px; display:inline-block' >
                                 </label>
                                 <label class='form-label' style='display:block;margin-right:15px;' *ngIf="generationType == 'chords'">
                                     <input class='form-control' [(ngModel)]="chanceToAllowAlteredDominantChord" type="number" name="chanceToAllowAlteredDominantChord" style='width:70px; display:inline-block' >
                                 </label>
                                 <label class='form-label' style='display:block;margin-right:15px;' *ngIf="generationType == 'chords'">
-                                    <input class='form-control' [(ngModel)]="chanceToAllowNonDiatonicChord" type="number" name="chanceToAllowNonDiatonicChord" style='width:70px; display:inline-block' >
+                                    <input class='form-control' [(ngModel)]="chanceToAllowBorrowedChord" type="number" name="chanceToAllowBorrowedChord" style='width:70px; display:inline-block' >
                                 </label>
                             </div>
                         </div>
